    --as-needed and --no-as-needed to the linker.
  * Update breaks on pre-multiarch packages.  Closes: #631907.
  * libc.preinst: improve and simplify search for old libraries, detect
    broken LD_LIBRARY_PATH.  Closes: #630608.
  * kfreebsd/local-sysdeps.diff, update to revision 3501 (from glibc-bsd),
    to fix <bits/siginfo.h>.  Closes: #631867.

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 3467 (from glibc-bsd).
  * Drop kfreebsd/local-ftw.diff, needed only for pre 8.0 kernels.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 20 Jun 2011 13:07:17 +0200

eglibc (2.13-7) unstable; urgency=low

  [ Aurelien Jarno ]
  * Update paths to the memcpy wrapper in NEWS.Debian.gz.  Closes: 
    #630138.
  * Fix preinst script wrt 3.0 kernel. Patch by Colin Watson.  Closes: 
    #630077.
  * debian/sysdeps/linux.mk: correctly check from multiarch asm/ include 
    directory.
  * Add patches/sparc/cvs-ifunc1.diff and patches/sparc/submitted-ifunc2.diff
    to fix multi-arch support on sparc. Update sysdeps/sparc.mk and 
    sysdeps/sparc64.mk to re-enable multi-arch support on sparc and sparc64.
    Closes: #625607.
  * debhelper.in/libc.preinst: improve error message when an old copy of ld.so
    is found.  Closes: #629983.
  * debhelper.in/libc.preinst: automatically remove leftovers from libc5 to 
    libc6 transition (upgrade from Bo to Hamm).  Closes: #629534.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 Jun 2011 20:33:19 +0200

eglibc (2.13-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * kfreebsd/local-sysdeps.diff, update to revision 3406 (from glibc-bsd),
    to fix <sys/mount.h>.  Closes: #629289, #629426.
  * debian/sysdeps/linux.mk: remove obsolete comment and code about 
    asm-sparc64. Use the multiarch asm directory if present.
  * debian/copyright: update.
  * Update breaks on pre-multiarch packages.
  * Allow tst-writev to fail due to changes on recent kernels.  Closes: 
    #629862.

  [ Samuel Thibault ]