@@ -29,6 +29,8 @@ eglibc (2.13-8) UNRELEASED; urgency=low
     broken LD_LIBRARY_PATH.  Closes: #630608.
   * kfreebsd/local-sysdeps.diff, update to revision 3501 (from glibc-bsd),
     to fix <bits/siginfo.h>.  Closes: #631867.
+  * libc.postrm: remove support code from Sarge.
+  * rules.d/debhelper.mk: install bug files using dh_bugfiles.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3467 (from glibc-bsd).
